[gd_scene load_steps=14 format=3 uid="uid://bcynflyjeq5r1"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_svmyq"]
[ext_resource type="FontFile" uid="uid://dbslkvb3cxdrj" path="res://assets/fonts/PixelOperator8.ttf" id="1_yhbsq"]
[ext_resource type="Script" path="res://scripts/score.gd" id="2_tsj1k"]
[ext_resource type="Texture2D" uid="uid://dg645i4wpm0mu" path="res://assets/sprites/tileset1.png" id="3_7hjrs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_idogc"]
atlas = ExtResource("3_7hjrs")
region = Rect2(304, 368, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r03p"]
atlas = ExtResource("3_7hjrs")
region = Rect2(320, 368, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmp26"]
atlas = ExtResource("3_7hjrs")
region = Rect2(288, 368, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y3nvi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idogc")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r03p")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmp26")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gup15"]
atlas = ExtResource("3_7hjrs")
region = Rect2(288, 385, 8, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ee5g"]
atlas = ExtResource("3_7hjrs")
region = Rect2(296, 385, 8, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm30k"]
atlas = ExtResource("3_7hjrs")
region = Rect2(304, 385, 8, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_txxip"]
atlas = ExtResource("3_7hjrs")
region = Rect2(312, 385, 8, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_hqqvs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gup15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ee5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm30k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txxip")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_svmyq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="Health1" type="AnimatedSprite2D" parent="HBoxContainer/HBoxContainer"]
position = Vector2(90, 65)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_y3nvi")
animation = &"empty"

[node name="Health2" type="AnimatedSprite2D" parent="HBoxContainer/HBoxContainer"]
position = Vector2(160, 65)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_y3nvi")
animation = &"empty"

[node name="Health3" type="AnimatedSprite2D" parent="HBoxContainer/HBoxContainer"]
position = Vector2(230, 65)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_y3nvi")
animation = &"empty"

[node name="Score" type="Node" parent="HBoxContainer"]

[node name="Coin" type="AnimatedSprite2D" parent="HBoxContainer/Score"]
position = Vector2(941, 65)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_hqqvs")
autoplay = "default"
frame_progress = 0.932715

[node name="Label" type="Label" parent="HBoxContainer/Score"]
offset_left = 763.0
offset_top = 52.0
offset_right = 899.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("1_yhbsq")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2
uppercase = true
script = ExtResource("2_tsj1k")
